--- a/spa/spa.html
+++ b/spa/spa.html
@@ -4,8 +4,19 @@
     <head>
         <title></title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="css/spa.css" />
+        <link rel="stylesheet" type="text/css" href="css/spa.shell.css" />
+        
+        <!--         third party libraries -->
+        <script src="/js/jq/jquery-1.9.1.js"></script>
+        <script src="/js/jq/jquery.uriAnchor-1.1.3.js"></script>
+
+        <!--         our own javascript libraries -->
+        <script src="/js/spa.js"></script>
+        <script src="/js/spa.shell.js"></script>
     </head>
     <body>
+        <div id="spa"></div>
         <p>This is a test page</p>
     </body>
 </html>
