--- a/spa/spa.html
+++ b/spa/spa.html
@@ -1,4 +1,4 @@
-<!doctype>
+<!doctype html>
 <html>
     <head>
         <title></title>
@@ -7,13 +7,20 @@
         <link rel="stylesheet" type="text/css" href="css/spa.shell.css" />
         
         <!--         third party libraries -->
-        <script src="/js/jq/jquery-1.9.1.js"></script>
-        <script src="/js/jq/jquery.uriAnchor-1.1.3.js"></script>
+        <script src="js/jq/jquery-1.9.1.min.js"></script>
+        <script src="js/jq/jquery.uriAnchor-1.1.3.js"></script>
 
         <!--         our own javascript libraries -->
-        <script src="/js/spa.js"></script>
-        <script src="/js/spa.shell.js"></script>
+        <script src="js/spa.js"></script>
+        <script src="js/spa.shell.js"></script>
+        <script>
+         $(function() {
+             spa.initModule( $('#spa') );
+         });
+        </script>
+
     </head>
+
     <body>
         <div id="spa"></div>
         <p>This is a test page</p>
